# cue-card-data

./: .env.example  .gitignore  Makefile  README.md  chroma.config.json  pyproject.toml
docker/: docker-compose.yml
docker/chroma/: Dockerfile
docker/postgres/: Dockerfile
docker/postgres/initdb/: 01_cards.sql
notebooks/: postgres_test.py  retrieval_test.ipynb  retrieval_test.py
scripts/: query_cards.py  start_services.ps1  stop_services.ps1
src/config/: chroma_config.py  settings.py
src/jobs/: create_chroma_collections.py  remove_collection.py  report.py
src/utils/: chroma.py  chroma_utils.py  collections.py
