[project]
name = "cue-card-data"
version = "0.1.0"
description = "Card data vector store service tooling (Chroma + Prefect + ingestion utilities)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.7",
    "httpx>=0.27.2",
    "pandas>=2.2.3",
    "prefect>=3.0.5",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "tqdm>=4.66.5",
    "typer>=0.12.5",
    "openai>=1.57.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.2",
    "mypy>=1.12.0",
]
notebooks = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.3",
    "nbconvert>=7.16.4",
    "nbformat>=5.10.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.2",
    "mypy>=1.12.0",
]

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "scripts"]
exclude = [".venv", "data", "docker", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
extend-ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
show_error_codes = true
warn_unused_configs = true
pretty = true
namespace_packages = true
exclude = ["notebooks", "\\.venv"]

[[tool.mypy.overrides]]
module = ["chromadb", "chromadb.*"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*"]
ignore_missing_imports = true
